--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -54,7 +54,7 @@ caption of our choice!-->
 <div class="bottomborder">
    <span class="spntxt pull-left">
         Want these offers, but don't have an
-American Express&reg; Card?<br/> <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
+American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
     </span> 
 </div>
 
