--- a/css/american.css
+++ b/css/american.css
@@ -145,9 +145,9 @@ input[type="submit"]{background:#2a5665;}
 	
 .btext { text-align:center; color:#29546e; font:normal 14px arial;  }
 .champ .marbot { margin-bottom:10px;}
-.champ .cont { margin-bottom:45px; float:left;}
-.leaderboard {  margin:10px 0 0 0; font-family:Arial, Helvetica, sans-serif; width:600px;float:left }
-.leaderboard li { float:left; margin:0 0 0 22px; background:#283e28; width:123px; font:normal 12px arial; color:#84c184; text-align:center; height:144px;      }
+.champ .cont { margin-bottom:10px; float:left;width:98%}
+.leaderboard {  margin:10px 0 0 0; font-family:Arial, Helvetica, sans-serif; width:100%;float:left }
+.leaderboard li { float:left; margin:0 0 0 22px; background:#283e28; width:123px; font:normal 12px arial; color:#84c184; text-align:center; height:140px;}
 .leaderboard li a { text-decoration:none; color:inherit;}
 .leaderboard a:hover li  { background:#2f2f2f; color:#e5a65c;}
 .leaderboard li u { text-decoration:none; }
