--- a/css/american.css
+++ b/css/american.css
@@ -15,7 +15,7 @@
 }
 
 html {width:900px;margin:0 auto;background:#fff}
-body { width:900px; background:url(../images/background.png) 0px -15px no-repeat;/*background:#f2f2f2;*/ margin:0 auto; padding:0; font-family:libre_baskervilleregular;}
+body { width:900px; background:url(../images/background2.png) 0px -15px no-repeat;/*background:#f2f2f2;*/ margin:0 auto; padding:0; font-family:libre_baskervilleregular;}
 * { margin:0; padding:0; list-style:none;}
 .bckno { background:none;}
 /*.table {
@@ -41,7 +41,7 @@ body { width:900px; background:url(../images/background.png) 0px -15px no-repeat
     margin: 0 auto;
     text-align: center;
     width: 807px;
-	height:460px;
+	height:465px;
 	
 }
 .champ strong { display:block; font-family:libre_baskervilleregular; width:100%; font-size:30px; font-weight:normal; margin-bottom:10px;  }
@@ -60,7 +60,7 @@ body { width:900px; background:url(../images/background.png) 0px -15px no-repeat
     padding: 2px 6px;
 }
 			.bottomborder {
-    background: url("../images/bottom2.png") no-repeat scroll 22px center;
+    background: url("../images/bottom2.png") no-repeat scroll 24px center;
     height: 45px;
     width: 100%;
 	position:relative;
@@ -263,7 +263,7 @@ input[type="submit"]{background:#2a5665;}
 	
 	
 }
-.ui-dialog-content p,.static p{font:normal 14px arial;line-height:20px}
+.ui-dialog-content p,.static p{font:normal 13px arial;line-height:20px}
 
 #opaque{
     background-color: black;
@@ -279,3 +279,13 @@ input[type="submit"]{background:#2a5665;}
 .pull-left{float:left}
 .spntxt{padding:5px !important;text-align:center !important;width:98.5% !important;font-size:14px !important;}
 .bottomborder .spntxt{font-size:13px !important;padding-top:0px !important}
+.errmsgcaption,.errormsg{color:#ff6600;font-size:12px;}
+.errormsg{float:left}
+.ui-dialog-content ol li {
+    float: left;
+    font-size: 12px;
+    font-weight: normal;
+    list-style: disc outside none;
+    margin: 5px 0;
+    width: 100%;
+}
