--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,6 +1,6 @@
 <div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
-   <span class="pull-left spntxt"> We invite you to contribute to this spirit by completing the phrase below or uploading a selfie. X lucky winners every week stand a chance to win an American Express&reg; Gift Card which shall get you a complimentary table for two in Cyber Hub.</span>
+   <span class="pull-left spntxt"> We invite you to contribute to this spirit by completing the phrase below or uploading a selfie. Six lucky winners every week stand a chance to win an American Express&reg; Gift Card which shall get you a complimentary table for two at Cyber Hub.</span>
 <!--
     <ul class="cyberhub">
         <li><b>1.</b>
@@ -19,13 +19,12 @@
 <br/><br/><br/>
     <form class="table1" method="post" style="margin-bottom:10px" action="champ.php" name="commentform" onsubmit="return validateform()">
         <input type="hidden" name="PHPSESSID" value="<?php echo session_id(); ?>" />
-        <strong>#ATABLEFOR
-</strong>
+        <strong>#ATableFor</strong>
         <input name="comment" type="text" maxlength="30" id="id_comment">
         <input name="optionchosen" value="1" type="hidden">
         <input name="" type="submit" value="Submit" />
 		<div class="errmsgcaption"></div>
-        <span class="spntxt pull-left">Complete the caption #ATableFor 
+        <span class="spntxt pull-left">Complete the phrase #ATableFor 
 </span>
 <br/>
 <span class="or">OR</span>
@@ -44,7 +43,7 @@
         <input style="padding:3px 0" name="" type="submit" value="Upload">
 		<div class="errormsg"></div>
 <br/>    
-    <span class="spntxt pull-left" style="margin-top:2px">Upload a selfie,tag its location and select a caption.
+    <span class="spntxt pull-left" style="margin-top:2px">Click to upload a selfie.
 <!--If you do not chose a caption, your selfie will be be tagged with a
 caption of our choice!-->
 </span>
