--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -48,7 +48,7 @@
 caption of our choice!-->
 </span>
     </form>
-<span class="pull-left spntxt"style="margin-top:20px">6 American Express Gift Cards to be won every week</span>
+<span class="pull-left spntxt"style="margin-top:20px">Six American Express Gift Cards to be won every week</span>
 
 
 </div>
