--- a/templates/champ_html.html
+++ b/templates/champ_html.html
@@ -1,3 +1,10 @@
+<style type="text/css">
+.bottomborder .spntxt {    
+    position: absolute;
+    top: -17px;
+}
+.off{font-size:12px}
+</style>
 <div id="opaque"></div>
 <div class="champ"><strong>CHAMPIONS</strong>
    <span class="pull-left spntxt"> We invite you to contribute to this spirit by completing the phrase below or uploading a selfie. Six lucky winners every week stand a chance to win an American Express&reg; Gift Card which shall get you a complimentary table for two at Cyber Hub.</span>
@@ -54,9 +61,11 @@ caption of our choice!-->
 </div>
 
 <div class="bottomborder">
-   <span class="spntxt pull-left">
-        Want these offers, but don't have an
-American Express&reg; Card? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Get one NOW!</a>
-    </span> 
+   <span class="spntxt pull-left" >
+If you are an American Express Cardmember, do not forget to explore special deals at Cyber Hub, Gurgaon. <br/>
+<span class="off" style="display:inline;background:#3e513d"><a href="specialoffer.php">DEALS</a></span>
+Yet to have one? <a target="_blank" href="https://www.americanexpress.com/in/content/credit-cards/">Apply for a Card, NOW!</a>
+
+</span>
 </div>
 
